GearsetPOC/force-app/main/default/objects/TransactionJournal/TransactionJournal.object-meta.xml
<CustomObject>
</CustomObject>