GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Action_By__c.field-meta.xml
<CustomField>
    <fullName>Action_By__c</fullName>
    <label>Action By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>