GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Booking_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_Time__c</fullName>
    <label>Booking Date/Time</label>
    <type>DateTime</type>
</CustomField>