GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/CarrierCode__c.field-meta.xml
<CustomField>
    <fullName>CarrierCode__c</fullName>
    <label>CarrierCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>