GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Transaction Journals</relationshipLabel>
    <relationshipName>Transaction_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>