GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Departure_date__c.field-meta.xml
<CustomField>
    <fullName>Departure_date__c</fullName>
    <label>Departure date</label>
    <type>DateTime</type>
</CustomField>