GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Used for backend purposes</description>
    <formula>Member.Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>