GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Hotel_Reference__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Reference__c</fullName>
    <label>Hotel Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>