GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Journal_SubType_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Journal_SubType_ExternalId__c</fullName>
    <formula>JournalSubType.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal SubType ExternalId</label>
    <type>Text</type>
</CustomField>