GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Journal_Type_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Journal_Type_ExternalId__c</fullName>
    <formula>JournalType.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Type ExternalId</label>
    <type>Text</type>
</CustomField>