GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>For backend use</description>
    <formula>Member.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>