GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Mig_Status_Points__c.field-meta.xml
<CustomField>
    <fullName>Mig_Status_Points__c</fullName>
    <description>Field used for Status Points only during Migration Phase</description>
    <label>Mig Status Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>