GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Oassis_Approved__c.field-meta.xml
<CustomField>
    <fullName>Oassis_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oassis Approved</label>
    <type>Checkbox</type>
</CustomField>