GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Opt_Out_From_Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_From_Reward_Points__c</fullName>
    <formula>Member.Opt_Out_From_Reward_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opt Out From Reward Points</label>
    <type>Checkbox</type>
</CustomField>