GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/PartnerMemberNumber__c.field-meta.xml
<CustomField>
    <fullName>PartnerMemberNumber__c</fullName>
    <label>Partner Member Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>