GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Point_Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>Point_Processing_Date__c</fullName>
    <label>Point Processing Date</label>
    <type>DateTime</type>
</CustomField>