GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Points_sent_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Points_sent_to_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Points sent to Partner</label>
    <type>Checkbox</type>
</CustomField>