GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Used for Amex supplier loyalty membership code</description>
    <label>Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>