GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Refund_Subscription_flag__c.field-meta.xml
<CustomField>
    <fullName>Refund_Subscription_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Subscription flag</label>
    <type>Checkbox</type>
</CustomField>