GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Share_With__c.field-meta.xml
<CustomField>
    <fullName>Share_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Share With</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>Transaction Journals</relationshipLabel>
    <relationshipName>Transaction_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>