GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Sharing_Points__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Points__c</fullName>
    <label>Sharing Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>