GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Transaction Journals</relationshipLabel>
    <relationshipName>Transaction_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>