GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Subscription_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Active_Date__c</fullName>
    <label>Subscription Active Date</label>
    <type>DateTime</type>
</CustomField>