GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Subscription_Rules__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Rules</label>
    <referenceTo>Subscription_Rules__c</referenceTo>
    <relationshipLabel>Transaction Journals</relationshipLabel>
    <relationshipName>Transaction_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>