GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket</label>
    <length>100</length>
    <type>Text</type>
</CustomField>