GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Tier_Accelerator_Points__c.field-meta.xml
<CustomField>
    <fullName>Tier_Accelerator_Points__c</fullName>
    <label>Tier Accelerator Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>