GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount__c</fullName>
    <description>For reservations, the total fees or prepaid balance. For goods and services, the total purchase price.</description>
    <formula>TransactionAmount</formula>
    <inlineHelpText>For reservations, the total fees or prepaid balance. For goods and services, the total purchase price.</inlineHelpText>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>