GearsetPOC/force-app/main/default/objects/TransactionJournal/fields/Transaction_Journal_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Journal_Process_Date__c</fullName>
    <formula>DATETIMEVALUE(Subscription__r.Subscription_Confirm_Date__c + Subscription_Rules__r.Reward_points_interval__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Journal Process Date</label>
    <type>DateTime</type>
</CustomField>